# microsoft-cert-alerts

./: .dockerignore  .env.example  Dockerfile  README.md  Taskfile.yaml  certifications.yaml  main.py  pyproject.toml  requirements.txt  test_main.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  schedule.yaml
src/: certifications.yaml  main.py
