[project]
name = "microsoft-cert-alerts"
version = "1.0.0"
description = "Monitor Microsoft certification expirations and send renewal alerts"
requires-python = ">=3.12"
dependencies = [
    "azure-communication-email==1.0.0",
    "azure-core>=1.30.1",
    "azure-mgmt-core>=1.4.0",
    "azure-common>=1.1.28",
    "requests==2.31.0",
    "PyYAML==6.0.1",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
